# TinyFT

./: .gitignore  README.md  pyproject.toml
configs/: base_full.yaml  base_lora.yaml  base_lora_cpt.yaml  base_qlora.yaml  example_alpaca.yaml  grpo_4bit_example.yaml  grpo_example.yaml  lora_config.yaml  trainer_sft.yaml
tests/: run_grpo_example.py  test_adapters.py  test_grpo.py  test_grpo_trainer.py
tinyft/: __init__.py  adapters.py  datasets.py  grpo_trainer.py  manager.py  trainer.py  utils.py
tinyft/engine/: __init__.py  sglang_engine.py  vllm_engine.py
tinyft/scripts/: merge_adapters.py  train_grpo.py  train_pretrain.py  train_sft.py
